# py_dependency_investigation

./: .gitignore  Makefile  README.md  build_packages.py  build_wheels.py  pypi_server.py  requirements.txt
dep-a/: README.md  pyproject.toml
dep-a/dep_a/: __init__.py
dep-bad-upper-bound/: README.md  pyproject.toml
dep-bad-upper-bound/dep_bad_upper_bound/: __init__.py
dep-old/: README.md  pyproject.toml
dep-old/dep_old/: __init__.py
dep-plain/: README.md  pyproject.toml
dep-plain/dep_plain/: __init__.py
dep-urllib3/: README.md  pyproject.toml
dep-urllib3/dep_urllib3/: __init__.py
