[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dep-bad-upper-bound"
dynamic = ["version"]
description = "A package where the old version didn't cap urllib3 and then breaks, but a new version has the correct specifier"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Anil Kulkarni", email = "akulkarni@anaconda.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/dep-bad-upper-bound#readme"
Issues = "https://github.com/unknown/dep-bad-upper-bound/issues"
Source = "https://github.com/unknown/dep-bad-upper-bound"

[tool.hatch.version]
path = "dep_bad_upper_bound/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:dep_bad_upper_bound tests}"

[tool.coverage.run]
source_pkgs = ["dep_bad_upper_bound", "tests"]
branch = true
parallel = true
omit = [
  "dep_bad_upper_bound/__about__.py",
]

[tool.coverage.paths]
dep_bad_upper_bound = ["dep_bad_upper_bound", "*/dep-bad-upper-bound/dep_bad_upper_bound"]
tests = ["tests", "*/dep-bad-upper-bound/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
