[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dep-urllib3"
dynamic = ["version"]
description = 'Urllib, with a big breaking change between v1 and v2'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Anil Kulkarni", email = "akulkarni@anaconda.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/dep-urllib3#readme"
Issues = "https://github.com/unknown/dep-urllib3/issues"
Source = "https://github.com/unknown/dep-urllib3"

[tool.hatch.version]
path = "dep_urllib3/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:dep_urllib3 tests}"

[tool.coverage.run]
source_pkgs = ["dep_urllib3", "tests"]
branch = true
parallel = true
omit = [
  "dep_urllib3/__about__.py",
]

[tool.coverage.paths]
dep_urllib3 = ["dep_urllib3", "*/dep-urllib3/dep_urllib3"]
tests = ["tests", "*/dep-urllib3/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
